// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pane > renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-14upriz"
  />
</DocumentFragment>
`;

exports[`Pane renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-s1f07n-Pane eqftyvq0"
  />
</DocumentFragment>
`;
